0.54.2.x (relative to 0.54.2.2)
========

Fixes
-----

Viewer : Fixed X-Ray shading mode on MacOS (#3473).

0.54.2.2 (relative to 0.54.2.1)
========

Fixes
-----

- ArnoldLightFilter : Fixed bug which caused animated light blockers to lose their transform.
- NodeEditor : Fixed bug that allowed drag and drop to create unwanted input connections to output plugs.
- GraphComponent : Fixed bug that allowed construction with an invalid name (#3436).
- Layouts : Keyboard shortcuts will now work in detached panels restored with a layout.
- ArnoldLight : Fixed a bug that prevented OSL shaders being used with Arnold lights.
- GraphEditor : Fixed several bugs and a crash that could occur when a parent of the editor's root node was changed or deleted.
- ImageReader : Fixed bug which meant that changes to the default format were not respected.
- UVInspector : Fixed bug which prevented alternative UV sets from being viewed.
- SceneInspector : Fixed bug comparing objects where a particular primitive variable existed on only one of the objects (#3432).

0.54.2.1 (relative to 0.54.2.0)
========

Fixes
-----

- UIEditor : Fixed bugs which prevented node colour from being edited (#3383, #3384, #3385).
- Encapsulate : Fixed concurrent access to signals that could cause crashes at render time
  (#3381).
- Layouts : Fixed bug in `editor()` method (#3395).
- TBB : Fixed an obscure context management bug involving older TBB versions in custom Gaffer builds (#3409).
- NodeSetEditor : Fixed circular references for linked editors (#3421).
- Added support for loading files saved in Gaffer 0.55 (#3415). Note that because version 0.54
  does not support multiple child inputs on the Parent node, only the first child input will
  be loaded.

0.54.2.0 (relative to 0.54.1.0)
========

Features
--------

- Shaders : Added support for attribute substitutions in all string shader parameters.
  Tokens of the form `<attr:attributeName>` will be automatically substituted with the