@@ -4,7 +4,8 @@
 Fixes
 -----
 
-Viewer : Fixed X-Ray shading mode on MacOS (#3473).
+- Viewer : Fixed X-Ray shading mode on MacOS (#3473).
+- Caching : Fixed bug in caches used across gaffer that could cause compute failures (#3469).
 
 0.54.2.2 (relative to 0.54.2.1)
 ========
